Implement play endpoint, use client for testing
